--- a/advanced_css/natours/starter/index.html
+++ b/advanced_css/natours/starter/index.html
@@ -6,7 +6,7 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/icon-font.css">
+        <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -26,7 +26,30 @@
                 <a href="#" class='btn btn--white btn--animated'>Discover our tours</a>
             </div>
         </header>
-        <section class='grid-test'>
+
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-8">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        Text content
+                    </div>
+                    <div class="col-1-of-2">
+                        Image composition
+                    </div>
+                </div>
+            </section>
+
+        </main>
+
+
+
+
+        <!-- <section class='grid-test'>
             <div class='row'>
                 <div class='col-1-of-2'>
                     Col 1 of 2
@@ -87,6 +110,6 @@
                     Col 3 of 4
                 </div>
             </div>
-        </section>
+        </section> -->
     </body>
 </html>
